# fastapi-microservices

./: .gitignore  docker-compose.yml  pyproject.toml
auth_service/: README.md  docker-compose.yml  kafka_producer.py
auth_service/app/: main.py
auth_service/app/api/: deps.py
auth_service/app/core/: config.py  security.py
auth_service/app/crud/: auth.py
auth_service/app/db/: base.py  models.py  session.py
auth_service/app/schemas/: auth.py
auth_service/app/services/: auth.py  registration.py
auth_service/app/utils/: jwt.py  refresh_token.py
auth_service/gRPC/src/: users_service_client.py  users_service_pb2_grpc.py
auth_service/migration/: env.py
auth_service/migration/versions/: 7198b7a4b3e9_remove_is_active_from_credentials.py  7b7e1568bd45_initial_revision.py
auth_service/tests/: test_auth.py
notification/: consumer.py  docker-compose.yml
notification/app/: main.py
notification/app/core/: config.py  mailer.py
notification/app/db/: base.py  enums.py  models.py
notification/migration/: env.py
notification/migration/versions/: 3281c290ed27_initial_revision.py
notification/templates/: registration.html
users-services/: docker-compose.yml
users-services/app/core/: config.py
users-services/app/db/: session.py
users-services/app/schemas/: user.py
users-services/migration/versions/: 55bd9f8690f3_add_is_verified_to_user_model.py
users_service/: Dockerfile.grpc  docker-compose.test.yml
users_service/app/: main.py
users_service/app/core/: config.py
users_service/app/db/: base.py  models.py
users_services/: docker-compose.yml  pyproject.toml  pytest.ini
users_services/migration/: env.py
users_services/tests/: conftest.py  test_users.py
(+20 files in other folders)
